# backend/app/serializers/export_job_list_resource.rb
@@ -1,0 +1,5 @@
+class ExportJobListResource < ApplicationResource
+  attribute :export_jobs do
+    object.export_jobs.map { |row| ExportJobResource.new(row).to_h }
+  end
+end
